# FileConverter

./: CMakeLists.txt  README.md
src/: ContextMenu.cpp  ContextMenu.h  Converter.cpp  Converter.h  Dropzone.cpp  Dropzone.h  MainWindow.cpp  MainWindow.h  main.cpp
